fix gap

--- a/wp-content/themes/echecs92-child/style.css
+++ b/wp-content/themes/echecs92-child/style.css
@@ -3966,8 +3966,8 @@ body.home .wp-site-blocks > .wp-block-template-part > .wp-block-html{
   display:flex;
   align-items:center;
   justify-content:flex-start;
-  gap:8px;
-  padding:8px 0 16px;
+  gap:0px;
+  padding:8px 0 0px;
   margin:0;
   position:sticky;
   top:0;
